--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,18 @@
 .idea
 .git
-**/node_modules
-**/out
 test
 *.iml
-*.tf
 *.md
 .gitignore
-.terraform
-terraform.*
-**/.bin
-docker-compose.yml
-scripts/private
+docker-compose*
+scripts
+vendor
+stacks
+node_modules/7zip-bin-*
+node_modules/app-builder-bin-*
+Makefile
+package.json
+yarn.lock
+Gopkg.*
+.gometalinter.json
+internal
