--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,57 +2,27 @@ version: "3.4"
 # As soon as will be released next stable docker version after 17.09, .Node.ID should be replaced to .Node.Hostname
 services:
   builder:
-    hostname: "{{.Node.ID}}-{{.Service.Name}}"
-    image: electronuserland/build-server
-    deploy: &DEPLOY
-      # on each node labeled "builder"
-      # docker node update --label-add builder=true
+    deploy:
+      # should be the only container per node
       mode: global
-      # nginx must access only builder on the same host. vip (virtual IP) mode causes issues on some node (cannot resolve node by virtual IP) and in any case not required (since router uses redis discovery to find build server)
       endpoint_mode: dnsrr
       placement:
         constraints:
           - node.labels.builder == true
-    volumes:
-      - socket:/socket
-      - stage:/stage
-      - type: tmpfs
-        target: /builder-tmp
-    environment:
-      - REDIS_ENDPOINT
-      - DEBUG
-      - ELECTRON_BUILDER_TMP_DIR=/builder-tmp
     logging: &LOGGING
       driver: json-file
       options:
         max-size: "4m"
         max-file: "2"
-    secrets:
-      - source: redis.v2
-        target: /run/secrets/redis
 
-  nginx:
-    command: ["/bin/sh", "-c", "rm -f /socket/nginx.socket && /start.sh -g 'daemon off;'"]
-    hostname: "{{.Node.ID}}-{{.Service.Name}}"
-    secrets:
-      - source: builder.crt.v2
-        target: bundle.crt
-      - source: builder.key.v1
-        target: node.key
-    configs:
-      - source: nginx.conf.v7
-        target: /etc/nginx/nginx.conf
-    volumes:
-      - socket:/socket
-      - stage:/stage
+  router:
     deploy:
-      <<: *DEPLOY
-    logging:
-      <<: *LOGGING
-
-volumes:
-  stage:
-  socket:
+      # docker swarm shows error if some other container has `port mode: host` Swarm should handle this situation, but as workaround for now, just use dnsrr
+      endpoint_mode: dnsrr
+      placement:
+        constraints:
+          - node.labels.admin == true
+    logging: *LOGGING
 
 secrets:
   builder.crt.v2:
@@ -60,8 +30,4 @@ secrets:
   builder.key.v1:
     external: true
   redis.v2:
-    external: true
-
-configs:
-  nginx.conf.v7:
     external: true
