fix: always log job id

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,8 +8,19 @@ docker-compose*
 scripts
 vendor
 stacks
-node_modules/7zip-bin-*
-node_modules/app-builder-bin-*
+
+node_modules/7zip-bin/linux/arm
+node_modules/7zip-bin/linux/arm64
+node_modules/7zip-bin/linux/ia32
+node_modules/7zip-bin/mac
+node_modules/7zip-bin/win
+
+node_modules/app-builder-bin/linux/arm
+node_modules/app-builder-bin/linux/arm64
+node_modules/app-builder-bin/linux/ia32
+node_modules/app-builder-bin/mac
+node_modules/app-builder-bin/win
+
 Makefile
 package.json
 yarn.lock
