--- a/k8s/router.yml
+++ b/k8s/router.yml
@@ -1,11 +1,16 @@
-apiVersion: apps/v1beta2
-kind: DaemonSet
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: router
-  namespace: default
+  labels: &LABELS
+    app: router
 spec:
+  selector:
+    matchLabels: *LABELS
   template:
     metadata:
+      labels: *LABELS
     spec:
       affinity:
         nodeAffinity:
@@ -17,62 +22,48 @@ spec:
                 values:
                 - "true"
       containers:
-      - image: electronuserland/build-service-router@sha256:d13b0bf57273997534c2116b74f5df2e92d74fa637566e26eed1a90803c031d6
-        imagePullPolicy: Always
-        livenessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /health-check
-            port: 443
-            scheme: HTTPS
-          initialDelaySeconds: 10
-          periodSeconds: 60
-          successThreshold: 1
-          timeoutSeconds: 2
+      - image: electronuserland/build-service-router@sha256:18a042e2200fc8d11d8d1e180b3b7d7d983f292485d2ab2c1f3850b936af9ea5
         name: router
         ports:
         - containerPort: 443
-          hostPort: 443
-          name: 443tcp4430
-          protocol: TCP
-        readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /health-check
-            port: 443
-            scheme: HTTPS
-          initialDelaySeconds: 1
-          periodSeconds: 2
-          successThreshold: 2
-          timeoutSeconds: 2
-        resources: {}
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities: {}
-          privileged: false
-          readOnlyRootFilesystem: false
-          runAsNonRoot: false
-        stdin: true
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        tty: true
         volumeMounts:
         - mountPath: /etc/secrets
           name: tls
           readOnly: true
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
+
+        readinessProbe:
+          httpGet:
+            path: /health-check
+            port: 443
+            scheme: HTTPS
+          failureThreshold: 3
+          periodSeconds: 1
+          successThreshold: 2
+          timeoutSeconds: 1
+        livenessProbe:
+          httpGet:
+            path: /health-check
+            port: 443
+            scheme: HTTPS
+          failureThreshold: 3
+          initialDelaySeconds: 60
+          periodSeconds: 300
+          successThreshold: 1
+          timeoutSeconds: 2
+
       volumes:
       - name: tls
         secret:
-          defaultMode: 256
-          optional: false
           secretName: tls
-  updateStrategy:
-    rollingUpdate:
-      maxUnavailable: 1
-    type: RollingUpdate
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: router
+spec:
+  selector:
+    app: router
+  ports:
+  - port: 443
+  externalIPs:
+  - 51.38.69.239
