--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "dist": "yarn build && yarn build-router && yarn push && yarn push-router && yarn bundle"
   },
   "dependencies": {
-    "electron-builder-lib": "20.22.0"
+    "app-builder-lib": "20.29.1"
   }
 }
