--- a/k8s/builder.yaml
+++ b/k8s/builder.yaml
@@ -24,8 +24,13 @@ spec:
                     values:
                       - "true"
       containers:
-        - image: electronuserland/build-service-builder@sha256:a1de4addea5b088f878554023d7f473c2311ba4c60f40d07bbd58e62c937e2e9
+        - image: electronuserland/build-service-builder@sha256:f260611d709073f53263f4e8ec52f48a4aba890fc4e985388983f0dcce9bfd5e
           name: builder
+          env:
+            - name: SNAP_DESTRUCTIVE_MODE
+              value: "true"
+            - name: USE_EMBEDDED_ETCD
+              value: "true"
           ports:
             - containerPort: 443
               hostPort: 443
@@ -35,6 +40,8 @@ spec:
               readOnly: true
             - mountPath: /builder-tmp
               name: tmp
+            - mountPath: /builder-embedded-etcd
+              name: embedded-etcd
 
           readinessProbe:
             httpGet:
@@ -62,6 +69,9 @@ spec:
         - name: tls
           secret:
             secretName: tls
-        - emptyDir:
+        - name: tmp
+          emptyDir:
             medium: Memory
-          name: tmp
+        - name: embedded-etcd
+          emptyDir:
+            medium: Memory
