feat: unpack electron on remote server

--- a/cmd/builder/Dockerfile
+++ b/cmd/builder/Dockerfile
@@ -1,3 +1,17 @@
+FROM golang:1.12 AS go-builder
+
+ENV GOPROXY=https://proxy.golang.org
+ENV GO111MODULE=on
+
+WORKDIR /project
+
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
+
+COPY . .
+RUN go build -ldflags='-s -w' -o /builder ./cmd/builder
+
 # electron-builder uses Xenial because of native node deps, but for snap Bionic must be used (as we use base: core18)
 FROM buildpack-deps:bionic-curl
 
@@ -6,10 +20,9 @@ FROM buildpack-deps:bionic-curl
 ENV DEBIAN_FRONTEND noninteractive
 
 # Grab dependencies
-RUN apt-get update -qq && apt-get dist-upgrade -qq && apt-get install -qq jq squashfs-tools
-
 # Grab the core snap from the stable channel and unpack it in the proper place
-RUN curl -L $(curl -H 'X-Ubuntu-Series: 16' 'https://api.snapcraft.io/api/v1/snaps/details/core' | jq '.download_url' -r) --output core.snap && mkdir -p /snap/core && unsquashfs -d /snap/core/current core.snap && \
+RUN apt-get update -qq && apt-get dist-upgrade -qq && apt-get install -qq jq squashfs-tools && \
+  curl -L $(curl -H 'X-Ubuntu-Series: 16' 'https://api.snapcraft.io/api/v1/snaps/details/core' | jq '.download_url' -r) --output core.snap && mkdir -p /snap/core && unsquashfs -d /snap/core/current core.snap && \
   curl -L $(curl -H 'X-Ubuntu-Series: 16' 'https://api.snapcraft.io/api/v1/snaps/details/snapcraft?channel=stable' | jq '.download_url' -r) --output snapcraft.snap && mkdir -p /snap/snapcraft && unsquashfs -d /snap/snapcraft/current snapcraft.snap
 
 # Create a snapcraft runner
@@ -35,9 +48,8 @@ RUN curl -L https://nodejs.org/dist/v12.4.0/node-v12.4.0-linux-x64.tar.gz | tar 
 
 COPY node_modules /node_modules
 
-RUN ln -s /node_modules/7zip-bin/linux/x64/7za /usr/local/bin/7za && /node_modules/app-builder-bin/linux/x64/app-builder prefetch-tools
-
-COPY out/linux/builder /builder
+RUN ln -s /node_modules/7zip-bin/linux/x64/7za /usr/local/bin/7za && /node_modules/app-builder-bin/linux/x64/app-builder prefetch-tools && \
+  /node_modules/app-builder-bin/linux/x64/app-builder download-electron --configuration '[{"platform":"linux","arch":"x64","version":"5.0.5"}]'
 
 # fix error /usr/local/bundle/gems/fpm-1.5.0/lib/fpm/package/freebsd.rb:72:in `encode': "\xE2" from ASCII-8BIT to UTF-8 (Encoding::UndefinedConversionError)
 # http://jaredmarkell.com/docker-and-locales/
@@ -53,5 +65,7 @@ ENV PATH="/snap/bin:$PATH"
 ENV SNAP="/snap/snapcraft/current"
 ENV SNAP_NAME="snapcraft"
 ENV SNAP_ARCH="amd64"
+
+COPY --from=go-builder /builder /builder
 
 CMD ["/builder"]
